update image bug

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Resumex - Professional HTML CSS Resume Website Template</title>
+    <title>Shirlyn Siow - UI/UX Designer Resume and Portfolio</title>
 
     <!-- favicon -->
-    <link href="img/img-profile.jpg" rel=icon>
+    <link href="img/img-profile.png" rel=icon>
 
     <!-- web-fonts -->
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
@@ -46,11 +46,11 @@
         </div>
         <div class="content">
             <h1>Shirlyn Siow</h1>
-            <span class="lead">UX/UI Designer</span>
+            <span class="lead">UI/UX Designer</span>
 
             <div class="about-text">
                 <p>
-                    Graphic, 3D, UI designer with +3 years of experience. Skilled at Adobe Creative Suite. Responsible for developing lots of design projects. Specializes in creating clean, artful designs that are both intuitive and functional. Looking for a new position as a designer in your company.
+                    Graphic, 3D, UI designer with +3 years of experience. Skilled at Photoshop, Illustrator, Figma and Adobe XD. Specializes in creating clean, artful designs that are both intuitive and functional. Looking for a new position as a UI designer in your company.
             </div>
 
 
@@ -145,6 +145,18 @@
                 <div class="progress-wrapper">
 
                     <div class="progress-item">
+                        <span class="progress-title">Figma</span>
+
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 80%"><span class="progress-percent"> 80%</span>
+                            </div>
+                        </div>
+                        <!-- .progress -->
+                    </div>
+                    <!-- /.skill-progress -->
+
+                    <div class="progress-item">
                         <span class="progress-title">Adobe XD</span>
 
                         <div class="progress">
@@ -154,9 +166,9 @@
                         </div>
                         <!-- .progress -->
                     </div>
-                    <!-- .skill-progress -->
+                    <!-- /.skill-progress -->
 
-
+                    
                     <div class="progress-item">
                         <span class="progress-title">Adobe Illustrator</span>
 
@@ -174,8 +186,8 @@
                         <span class="progress-title">Adobe Photoshop</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 70%;"><span class="progress-percent"> 70%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 75%;"><span class="progress-percent"> 75%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -234,25 +246,25 @@
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>Jul. 2017 - Jan. 2018</small>
-                    <h3>Event Poster Designer</h3>
-                    <h4>NTUT, Office of International Affairs</h4>
+                    <small>Sep. 2018 - Oct. 2021</small>
+                    <h3>3D Exhibition Designer</h3>
+                    <h4>Event Solution Plus Inc.</h4>
 
                     <p>Taipei, Taiwan</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>Mar. 2019 - May 2019</small>
-                    <h3>App UX/UI Designer</h3>
-                    <h4>Cooperation with Foon Yew Student Association</h4>
+                    <small>Jul. 2020 - Present</small>
+                    <h3>UI/UX Designer (Freelancer)</h3>
+                    <h4>Atecl Technology</h4>
 
-                    <p>Taipei, Taiwan</p>
+                    <p>Malaysia</p>
                 </div>
               <!-- .experience-item -->
                 <div class="content-item">
-                    <small>Sep. 2017 - Present</small>
-                    <h3>3D Exhibition Designer</h3>
-                    <h4>Event Solution Plus Inc.</h4>
+                    <small>Dec. 2021 - Present</small>
+                    <h3>UI/UX Designer</h3>
+                    <h4>Quantum Soft PLT., Malaysia</h4>
 
                     <p>Selangor, Malaysia</p>
             </div>
@@ -409,8 +421,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="copytext">&copy; Resumex. All rights reserved | Design By : <a
-                            href="https://themehippo.com">Shirlyn Siow</a></div>
+                    <div class="copytext">Design By : <a
+                            href="https://www.linkedin.com/in/shirlyn-0403">Shirlyn Siow</a></div>
                 </div>
             </div>
             <!--.row-->
