--- a/portfolio/graphic.html
+++ b/portfolio/graphic.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Reopen - Html Responsive Template</title>
+        <title>Shirlyn Siow - UI/UX Designer Resume and Portfolio</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by Dry Themes" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
         <meta name="author" content="DryThemes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.png" />    
+        <link rel="shortcut icon" href="images/img-profile.png" />    
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i,900%7CMontserrat:400,700%7CPT+Serif' rel='stylesheet' type='text/css'>	
         <link rel="stylesheet" type="text/css"  href='css/clear.css' />
         <link rel="stylesheet" type="text/css"  href='css/common.css' />
